--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/node": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "express": "^4.18.2",
+    "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "open": "^8.4.0",
     "path": "^0.12.7",
